--- a/VSCode/TFModFortRiseWinCounters.csproj
+++ b/VSCode/TFModFortRiseWinCounters.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MonoMod.RuntimeDetour" Version="22.5.1.1">
       <IncludeAssets>compile</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="TeuJson" Version="3.1.2">
       <IncludeAssets>compile</IncludeAssets>
     </PackageReference>
